2018-06-29  Sylvain Lesage  <severo@rednegra.net>

	[BZ #22996]
	* localedata/locales/es_BO (LC_PAPER): Change to “copy "en_US"”.

2018-07-06  Florian Weimer  <fweimer@redhat.com>

	* conform/conformtest.pl (checknamespace): Escape literal braces
	in regular expressions.

2018-06-21  Florian Weimer  <fweimer@redhat.com>

	[BZ #23253]
	* sysdeps/generic/math_private.h (default_libc_feholdsetround_ctx):
	Renamed from libc_feholdsetround_ctx.
	(default_libc_feresetround_ctx): Renamed from
	libc_feresetround_ctx.
	(default_libc_feholdsetround_noex_ctx): Renamed from
	libc_feholdsetround_noex_ctx.
	(default_libc_feresetround_noex_ctx): Renamed from
	libc_feresetround_noex_ctx.
	[!HAVE_RM_CTX] (libc_feholdsetround_ctx, libc_feresetround_ctx)
	(libc_feholdsetround_noex_ctx, libc_feresetround_noex_ctx): Macros
	forwardning to the old implementations under the new names.
	* sysdeps/i386/fpu/fenv_private.h [__SSE_MATH__]
	(libc_feholdexcept_setround_ctx, libc_fesetenv_ctx)
	(libc_feupdateenv_ctx, libc_feholdsetround_ctx)
	(libc_feresetround_ctx): Forward to default implements for i386
	and MATH_SET_BOTH_ROUNDING_MODES.
	* sysdeps/i386/Makefile [$(subdir) == math] (CFLAGS-e_gamma_r.c):
	Add -DMATH_SET_BOTH_ROUNDING_MODES.

2018-07-03  Florian Weimer  <fweimer@redhat.com>

	[BZ #23363]
	* stdio-common/tst-printf.c (DEC, INT, UNS, fp_test): Remove.
	* stdio-common/tst-printf.sh: Adjust expected output.
	* LICENSES: Update.

2018-06-26  Florian Weimer  <fweimer@redhat.com>

	* libio/Makefile (tests-internal): Add tst-vtables,
	tst-vtables-interposed.
	* libio/tst-vtables.c: New file.
	* libio/tst-vtables-common.c: Likewise.
	* libio/tst-vtables-interposed.c: Likewise.

2018-06-26  Florian Weimer  <fweimer@redhat.com>

	[BZ #23313]
	* libio/vtables.c (check_stdfiles_vtables): New ELF constructor.

2018-06-29  Daniel Alvarez  <dalvarez@redhat.com>
	    Jakub Sitnicki  <jkbs@redhat.com>

	[BZ #21812]
	* sysdeps/unix/sysv/linux/ifaddrs.c (getifaddrs_internal): Retry