@@ -1,3 +1,10 @@
+2018-07-10  Florian Weimer  <fweimer@redhat.com>
+
+	[BZ #23036]
+	* posix/regexec.c (check_node_accept_bytes): When comparing
+	weights, do not compare an extra byte after the end of the
+	weights.
+
 2018-06-29  Sylvain Lesage  <severo@rednegra.net>
 
 	[BZ #22996]
